force-app/main/default/objects/GG_Currency_Display_Settings__c/GG_Currency_Display_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GG Currency Display Settings</label>
</CustomObject>