force-app/main/default/objects/GG_Currency_Display_Settings__c/fields/currencyDisplay__c.field-meta.xml
<CustomField>
    <fullName>currencyDisplay__c</fullName>
    <label>Currency Display</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>