force-app/main/default/objects/GG_Currency_Display_Settings__c/fields/effectiveDate__c.field-meta.xml
<CustomField>
    <fullName>effectiveDate__c</fullName>
    <description>This is for documentation purposes only. Not used in code.</description>
    <inlineHelpText>This is for documentation purposes only. Not used in code.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>