force-app/main/default/objects/GG_Currency_Display_Settings__c/fields/exchangeValue__c.field-meta.xml
<CustomField>
    <fullName>exchangeValue__c</fullName>
    <description>Amount of Foreign Currency to the Dollar</description>
    <inlineHelpText>Amount of Foreign Currency to the Dollar</inlineHelpText>
    <label>Exchange Value</label>
    <precision>12</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>