force-app/main/default/objects/GG_Currency_Display_Settings__c/fields/vat__c.field-meta.xml
<CustomField>
    <fullName>vat__c</fullName>
    <inlineHelpText>In Percent</inlineHelpText>
    <label>VAT</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>